	* new: Slideshows can now be used to output a single random image (credit: Lee Doel)
	* changed: added check for is_post_type_archive() to the sb_page_title hook
	* changed: improved URL scheme for admin links in footer
	* changed: sb_before/after_{sidebar}_aside to sb_before/after_{sidebar}
	
2011.06.24 - version 2.5.1
	* new: added sb_before/after_{sidebar}_aside to appear outside of opening/closing div for given sidebar
	* changed: moved sb_before/after_{sidebar}_widgets to appear inside of opening/closing div for for given sidebar
	* fixed: removed extra double quote output at end of sb_post_image_url()
	* fixed: hooked style.css to wp_enqueue_scripts, instead of template_redirect, preventing layout override
	* fixed: JS bug in Slideshows that prevented admin UI from working in IE, FF5 and Safari
	* fixed: bug that prevented thumbnails from being disabled via Theme Options

2011.06.12 - version 2.5
	* new: added new Sidebar manager, create custom sidebars via the Appearance menu
	* new: theme support for custom page layouts
	* new: layout selector added for all post types and taxonomies
	* new: a 'layout' option type for the Options API
	* new: filter sb_layout_image_uri to set custom layout images
	* new: filter get_post_layout_default to override default layout
	* new: filter get_theme_layout to alter body class output for layouts
	* new: several more hooks before and after each individual widget area. maintained legacy hooks, too.
	* new: sb_post_image_url() to output just the image URI for cropped images
	* new: conditional sb_verify_post_type($type)
	* new: shortcode [sidebar id="the-sidebar-id"] for adding sidebars virtually anywhere
	* new: SB_Sidebar class, can be extended by child theme to redefine StartBox sidebar defaults
	* changed: added several more theme options for controlling post thumbnails
	* changed: adjusted footer text sanitization to allow only practical html by default