@@ -6,7 +6,7 @@ Table of Contents
 
 0.	One Column, no sidebars
 1. 	Two Columns, Sidebar on left
-2.	Two Columns, Sidebar on left
+2.	Two Columns, Sidebar on right
 3.	Three Columns, Sidebars on left
 4.	Three Columns, Sidebars on right
 5.	Three Columns, Sidebars on both sides
